# fluxa

./: .gitignore  R2_SETUP.md  README.md  action_example.json  actions.py  blur_background_action.json  default.nix  output.json  photoshop_actions.py  requirements.txt  run.sh  transcript.txt
actionJSON-generator/: .gitignore  API_CONTEXT_NOTES.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  action.json  default.nix  new_actions_plan.md  output.json  pyproject.toml  requirements.txt  setup.sh  temp.json  verify_setup.py
actionJSON-generator/config/: default.json
actionJSON-generator/examples/: example-output.json  example-web-url.txt  example-youtube-url.txt
actionJSON-generator/runs/0043685fafdd4610b5ce6b453ae9dd27/: output.json
actionJSON-generator/runs/103da0f784a445b8954b0991e3ccf122/: output.json
actionJSON-generator/runs/32070f6f95e5417ead50625bc95e5220/: actions.json  output.json
actionJSON-generator/runs/58b10506d7894586a236273e188b5047/: output.json
actionJSON-generator/runs/71179a2df0114be180466c01b1222561/: output.json
actionJSON-generator/runs/ef0c5c9f56c140afbfe6cde33c61314e/: output.json
actionJSON-generator/src/fluxa/: __init__.py  cli.py
actionJSON-generator/src/fluxa/extractors/: __init__.py  factory.py  web_extractor.py  youtube_extractor.py
actionJSON-generator/src/fluxa/generators/: __init__.py  agent_photoshop_action_generator.py  photoshop_action_generator.py
actionJSON-generator/tests/: __init__.py  test_extractors.py  test_validator.py
frontend/: index.html  (+2 more)
(+74 files in other folders)
