[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxa"
version = "0.1.0"
description = "AI-powered tool to convert Photoshop tutorials into executable API JSON"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Fluxa Team"}
]
dependencies = [
    "openai>=1.0.0",
    "youtube-transcript-api>=0.6.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
fluxa = "fluxa.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


